@@ -558,9 +558,9 @@ installing with flag @option{--no-byte-compile}.
 @c DESCRIPTION field StagedInstall
 The @samp{StagedInstall} logical field controls if package installation
 is `staged', that is done to a temporary location and moved to the final
-location when successfully completed.  This was introduced in @R{}
-3.6.0; it is currently optional but will become the default
-before release.
+location when successfully completed.  This was introduced in @R{} 3.6.0
+and it true by default: it is considered to be a temporary measure which
+may be withdrawn in future.
 
 @c DESCRIPTION field ZipData
 The @samp{ZipData} logical field has been ignored since @R{} 2.13.0.
@@ -1803,15 +1803,16 @@ If using Autoconf it is good practice to include all the Autoconf
 sources in the the package (and required for an Open Source package).
 This will include the file @file{configure.ac}@footnote{a decade ago
 Autoconf used @file{configure.in}: this is still accepted but should be
-renamed.} in the top-level directory of the package.  If extensions
-written in @command{m4} are needed, these should be included under the
-directory @file{tools} and included in @file{configure.ac} @emph{via}
-e.g.,
+renamed and @command{autoreconf} as used by @command{R CMD check
+--as-cran} will report as such.} in the top-level directory of the
+package.  If extensions written in @command{m4} are needed, these should
+be included under the directory @file{tools} and included in
+@file{configure.ac} @emph{via} e.g.,
 @example
 m4_include([tools/ax_pthread.m4])
 @end example
 @noindent
-One common source of such extensions is the `Autoconf Archive'
+One source of such extensions is the `Autoconf Archive'
 (@uref{https://www.gnu.org/@/software/@/autoconf-archive}.  It is not
 safe to assume this is installed on users' machines, so the extension
 should be shipped with the package (taking care to comply with its
